; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_conditionals.c_sandbox_path.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_conditionals.c_sandbox_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_5__*, i8*)* @sandbox_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @sandbox_path(%struct.TYPE_5__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = call i32 (...) @clar_sandbox_path()
  %7 = call i8* @p_realpath(i32 %6, i32* null)
  store i8* %7, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @cl_assert(i8* %8)
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @git_buf_attach(%struct.TYPE_5__* %10, i8* %11, i32 0)
  %13 = call i32 @cl_git_pass(i32 %12)
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i8*, i8** %16, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @git_buf_joinpath(%struct.TYPE_5__* %14, i8* %17, i8* %18)
  %20 = call i32 @cl_git_pass(i32 %19)
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load i8*, i8** %22, align 8
  ret i8* %23
}

declare dso_local i8* @p_realpath(i32, i32*) #1

declare dso_local i32 @clar_sandbox_path(...) #1

declare dso_local i32 @cl_assert(i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_buf_attach(%struct.TYPE_5__*, i8*, i32) #1

declare dso_local i32 @git_buf_joinpath(%struct.TYPE_5__*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
